[gd_scene load_steps=8 format=3 uid="uid://yoqarwll6bry"]

[ext_resource type="Script" path="res://Tile.gd" id="1_eimvl"]
[ext_resource type="Texture2D" uid="uid://b7s5hdmr887os" path="res://back_tile.png" id="2_ghrsd"]
[ext_resource type="Texture2D" uid="uid://ci4evpk0h7ui7" path="res://DaramHead.png" id="3_c5wyr"]
[ext_resource type="Texture2D" uid="uid://cfxrexvsg8qq3" path="res://cover.png" id="5_4j068"]
[ext_resource type="AudioStream" uid="uid://hcc8ia2acrx" path="res://click.ogg" id="6_rmftn"]
[ext_resource type="Texture2D" uid="uid://ci6rx6xycwv7k" path="res://Flag.png" id="6_si4rs"]
[ext_resource type="AudioStream" uid="uid://didq53vcvbtrq" path="res://flag.ogg" id="7_7w2x4"]

[node name="Tile" type="Node2D"]
process_mode = 1
script = ExtResource("1_eimvl")

[node name="BackTile" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(16, 16)
texture = ExtResource("2_ghrsd")

[node name="DaramHead" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(16, 16)
scale = Vector2(1.06, 1.06)
texture = ExtResource("3_c5wyr")

[node name="Label" type="Label" parent="."]
process_mode = 1
texture_filter = 1
offset_right = 32.0
offset_bottom = 32.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cover" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(16, 16)
texture = ExtResource("5_4j068")

[node name="CheckFlag" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(16, 16)
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_si4rs")

[node name="Control" type="Control" parent="."]
process_mode = 1
layout_mode = 3
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_rmftn")

[node name="FlagSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_7w2x4")

[connection signal="gui_input" from="Control" to="." method="_on_control_gui_input"]
